Use StandardCharsets (#262)